--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
     <title>To do List</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="todo-app">
+        <h2>To-Do List <img src="img/icon.png" /></h2>
+        <div class="row">
+          <input type="text" id="input-box" placeholder="Add your text" />
+          <button>Add</button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
